# TradeIland

./: .gitignore  README.md  create_calendar_sheet.py  create_correct_daily_calendar.py  create_daily_calendar.py  create_filtered_daily_calendar.py  detailed_analysis.py  explore_excel.py  investigate_daily_data.py  main.py  pyproject.toml  verify_structure.py
.github/workflows/: claude.yml
docs/development/: setup.md
docs/memos/: ideas.md
docs/specifications/: requirements.md
scraping/: .env.template  README.md  __init__.py  cli.py  pyproject.toml
scraping/auth/: __init__.py  authenticator.py  session_manager.py
scraping/config/: __init__.py  logger.py  settings.py  settings.yaml
scraping/exporters/: __init__.py
scraping/scrapers/: __init__.py
